--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>京王線 ライブ配線図モニター Ver.1.2</title>
+    <title>京王線 ライブモニター Ver.1.3</title>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
@@ -22,18 +22,19 @@
         .map-content { position: relative; width: 1200px; height: 675px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
 
+        /* 列車アイコン */
         .train {
             position: absolute; width: 26px; height: 16px;
             border-radius: 2px; border: 1.5px solid #fff;
             transform: translate(-50%, -50%); z-index: 100;
-            transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 0 10px rgba(0,0,0,0.8);
+            transition: all 1.2s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 0 8px rgba(0,0,0,0.8);
             display: flex; align-items: center; justify-content: center;
         }
 
-        /* 1段表示用ラベル */
+        /* 1段表示ラベル (全白文字) */
         .train-label {
-            position: absolute; top: -24px;
+            position: absolute; top: -26px;
             background: rgba(0,0,0,0.85); color: #fff;
             padding: 2px 6px; border-radius: 4px;
             font-size: 10px; font-weight: bold; white-space: nowrap;
@@ -41,8 +42,9 @@
             display: flex; gap: 5px; align-items: center;
         }
 
-        .delay-text { color: #ff4444; font-weight: 900; }
+        .delay-text { color: #ff4444; font-weight: 900; } /* 遅れのみ赤 */
 
+        /* 種別色 */
         .sy-1 { background-color: #ff4c7c; } .sy-2 { background-color: #00b66a; } 
         .sy-3 { background-color: #0082ff; } .sy-5 { background-color: #d8d100; color: #000; } 
         .sy-6 { background-color: #888; }    .sy-9, .sy-11 { background-color: #c71585; } 
@@ -52,8 +54,8 @@
 
 <header>
     <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧</a>
-    <h1 style="font-size:14px; margin:0;">京王線 リアルタイムモニター</h1>
-    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">接続中...</div>
+    <h1 style="font-size:14px; margin:0;">京王線 ライブモニター (運用解析強化版)</h1>
+    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">更新待機中...</div>
 </header>
 
 <div class="map-wrapper">
@@ -66,7 +68,7 @@
 <script>
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 
-// 運用データをスクリプト内に直接定義 (ファイルを読み込まないので確実です)
+// あなたの運用リストをそのまま貼り付け
 const RAW_UNYO_DATA = `
 1T
 5803,5802,4807,2802
@@ -162,16 +164,27 @@ const RAW_UNYO_DATA = `
 6117,5108,5867,5866,2817,2832,4869,4876,5853A,5848A,4813A
 `;
 
-// 運用マップ生成
+// 運用ブロック解析メカニズム
 function parseUnyo(raw) {
     const map = {};
     const lines = raw.split('\n');
-    let current = "";
+    let currentUnyo = "--";
+
     lines.forEach(line => {
-        line = line.trim();
-        if (!line) return;
-        if (/^\d+[TK]$/.test(line)) current = line;
-        else if (current) line.split(',').forEach(tr => map[tr.trim()] = current);
+        const trimmed = line.trim();
+        if (!trimmed) return;
+
+        // もし行が「数字+T/K」なら運用番号として記憶
+        if (/^\d+[TK]$/.test(trimmed)) {
+            currentUnyo = trimmed;
+        } 
+        // それ以外（列車番号のカンマ区切り）なら今の運用番号を紐付け
+        else {
+            trimmed.split(',').forEach(tr => {
+                const trNum = tr.trim();
+                if (trNum) map[trNum] = currentUnyo;
+            });
+        }
     });
     return map;
 }
@@ -216,6 +229,7 @@ async function update() {
 
                 if (base) {
                     activeIds.add(p.tr);
+                    // 重複回避
                     const cKey = `${base.x}_${base.y}`;
                     const offset = (posCounter[cKey] || 0) * 10;
                     posCounter[cKey] = (posCounter[cKey] || 0) + 1;
@@ -235,7 +249,7 @@ async function update() {
                     const unyo = unyoMap[p.tr] || "--";
                     const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
 
-                    // ラベルを1段表示に変更
+                    // 【変更点】1段に全情報を集約（白文字）
                     el.innerHTML = `
                         <div class="train-label">
                             <span>${model}</span>
