--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>京王線 ライブモニター 真・完全版</title>
+    <title>京王線 ライブモニター 完全版</title>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
@@ -22,15 +22,17 @@
         .map-content { position: relative; width: 1200px; height: 675px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
 
+        /* 列車アイコン本体 */
         .train {
             position: absolute; width: 26px; height: 16px;
             border-radius: 2px; border: 1.5px solid #fff;
             transform: translate(-50%, -50%); z-index: 100;
-            transition: all 1s linear;
+            transition: all 1.2s cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0 0 8px rgba(0,0,0,0.8);
             display: flex; align-items: center; justify-content: center;
         }
 
+        /* 1段表示ラベル (白文字) */
         .train-label {
             position: absolute; top: -26px;
             background: rgba(0,0,0,0.85); color: #fff;
@@ -40,9 +42,9 @@
             display: flex; gap: 5px; align-items: center;
         }
 
-        .delay-text { color: #ff4444; font-weight: 900; }
+        .delay-text { color: #ff4444; font-weight: 900; } /* 遅れは赤強調 */
 
-        /* 種別色設定 */
+        /* 種別色カラー（京王標準に準拠） */
         .sy-1 { background-color: #ff4c7c; } /* 特急 */
         .sy-2 { background-color: #00b66a; } /* 区急 */
         .sy-3 { background-color: #0082ff; } /* 快速 */
@@ -54,9 +56,8 @@
 <body>
 
 <header>
-    <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧</a>
-    <h1 style="font-size:14px; margin:0;">京王線 ライブモニター (全データ統合)</h1>
-    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">接続中...</div>
+    <h1 style="font-size:14px; margin:0;">京王線 ライブモニター</h1>
+    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">読込中...</div>
 </header>
 
 <div class="map-wrapper">
@@ -69,107 +70,11 @@
 <script>
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 
-// 【全運用リスト】
-const RAW_UNYO_DATA = `
-1T
-5803,5802,4807,2802
-3T
-5805,5804,4809,2804,5873,5872,5889,5888,5805A,6909,6918,5847A,5842A
-5T
-5801,5800,5817,5816,5851,5850,4839,4844,4861,4868,5839A,5836A,5857A,5852A,5873A,5868A
-7T
-6901,6906,4803,4818
-9T
-6900,4801,5712
-11T
-6902,5807,5806,5825,5826,5859,5802A,5819A,5820A,5845A,1904
-13T
-5811,5810,5837,5838,1905,5862,5879,5878,4857,4862,4881,1810,6926,5861A,5856A,5879A,5872A
-15T
-5813,5812,4821,4830,4847,4852,5811A,5812A,5835A,5832A,4897,4806A
-17T
-5815,5814,4823,2812,5883,5882,5899,5898,5815A,5816A,4885,4894
-19T
-5819,5818,5711,6708
-21T
-5821,5822,1803,6706,4866,5837A,5834A
-23T
-5823,5824,5857,5856,4841,4846,4863,2848,5843A,5840A,4803A
-25T
-5827,5828,2801,4836,4853,4858,5821A,1900,4887,4892
-27T
-6908,5829,5830
-29T
-5833,5834,5863,6763,2850
-31T
-1901,5820,5855,5854,2809,2824,2829,4864,5833A,5830A
-33T
-4815,6769,2706,6781,4888,5867A,5862A,5885A,5878A
-35T
-6903,1801,6723,4824
-37T
-4817,4828,4845,4850,2835,4874
-39T
-6910,4819,2808,5877,5876,5893,5892,5809A,5810A,5831A,5828A,6925,1821,6799,4804A
-41T
-6912,5849,5848,2807,2822,2827,2842,6913,1809,4884,4807A,4810A
-51T
-6601,5008,4833,4838,4855,4860,5825A,5822A,6923,1819,6797,4800A
-53T
-5704,5831,5832,4831,2816,5887,5886,5803A,5804A,4877,1806,6922
-55T
-4822
-57T
-4873,1804,5855A,5850A,5869A,5864A,5887A,5880A,5629
-59T
-2841,4882,5859A,5854A
-61T
-6911,1807,6775,1808,6924,4805A,4808A,6927
-63T
-5827A,5824A,5851A,5846A,5863A,5858A,5881A,5874A
-65T
-5829A,1902,5849A,5844A,4809A,2854
-67T
-1907,5826A,4891,4898,5877A,5870A,6929
-61K
-2800,4805,4820,4837,4842,5897,5896,4871,1802,6920,4893,4802A,2843,6762
-63K
-6701,4700,5701,4812,4827,4834,4851,4856,4875,4880,4899
-65K
-6707,4802,5839,5840,5865,5864,5881,5880,4859,2844,6915,1811,6783,2714,6795
-67K
-5700,5703,1800,6914,4829,2814,2819,2834,5813A,5814A,4883,1812,6928,5865A,5860A,5883A,5876A
-69K
-4800,5835,5836,2803,2818,5891,5890,4867,4872,4889
-71K
-6715,4810,5853,5852,5871,5870,2821,2836,6905,6916,6917,1813,6787,2716,6135,5106A,5233
-73K
-6709,4804,5843,5844,2805,2820,2825,2840,5823A,6773,2710,6131,5194,0777,6707A,2722,2703
-75K
-4806,5845,5846,5869,5868,5885,5884,5801A,5800A,5817A,5818A,6919,1815,4890,5871A,5866A,5721
-77K
-6713,4808,4825,4832,4849,4854,2839,4878,4895,2852
-79K
-4814,5861,5860,2813,2828,2833,4870,6921,1817,6791,4896,5875A,0219,6035,6030
-81K
-6904,5809,5808,4811,4826,2811,2826,2831,2846,5841A,5838A,4801A,2720,6758
-83K
-4813,2805,4843,4848,4865,6765,2702,0093,0080,0013A,0090,0205,6021,6020,0214,0221,6037,6032
-85K
-5100,5847,6729,2810,2815,2830,5807A,5808A,4879,2712,6133,5102A,5229
-87K
-6005,6004,0204,4703,4816,1903,5858,5875,5874,2823,2838,6907,1805,6771,2708,6785,1814,6930,4815A,6754
-89K
-5206,5841,5842,4835,4840,5895,5894,2837,2704,6779,4886,4811A
-91K
-6117,5108,5867,5866,2817,2832,4869,4876,5853A,5848A,4813A
-`;
-
-// 【全座標マップ】
+// 【最新の座標データ全流し込み】
 const posCoords = {
     "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
-    "E002_1": {x: 680, y: 65},  "E002_2": {x: 680, y: 91}, "E002_3": {x: 680, y: 120}, "E002_4": {x: 680, y: 146},
+    "E002_1": {x: 680, y: 65},  "E002_2": {x: 680, y: 91},  "E002_3": {x: 680, y: 120}, "E002_4": {x: 680, y: 146},
     "E033_4": {x: 149, y: 91},  "E033_5": {x: 149, y: 119},
     "D034":   {x: 295, y: 91},  "U033":   {x: 295, y: 120},
     "E034_1": {x: 367, y: 91},  "E034_2": {x: 367, y: 120},
@@ -180,7 +85,7 @@ const posCoords = {
     "E003_1": {x: 893, y: 91},  "E003_2": {x: 893, y: 120},
     "D004":   {x: 976, y: 91},  "U003":   {x: 976, y: 120},
     "E004_1": {x: 1053, y: 91}, "E004_2": {x: 1053, y: 120},
-    "D005":   {x: 55, y: 322},  "U004":   {x: 1145, y: 120},
+    "D005":   {x: 55,  y: 322}, "U004":   {x: 1145, y: 120},
     "E005_1": {x: 145, y: 322}, "E005_2": {x: 145, y: 351},
     "D006":   {x: 230, y: 322}, "U005":   {x: 230, y: 351},
     "E006_1": {x: 337, y: 294}, "E006_2": {x: 337, y: 322}, "E006_3": {x: 337, y: 351}, "E006_4": {x: 337, y: 378},
@@ -196,26 +101,7 @@ const posCoords = {
     "E011_1": {x: 1122, y: 322}, "E011_2": {x: 1122, y: 351}
 };
 
-function parseUnyo(raw) {
-    const map = {};
-    const lines = raw.split('\n');
-    let currentUnyo = "--";
-    lines.forEach(line => {
-        const t = line.trim();
-        if (!t) return;
-        if (/^\d+[TK]$/.test(t)) {
-            currentUnyo = t;
-        } else {
-            t.split(',').forEach(tr => {
-                const cleanTr = tr.trim().replace(/^0+/, '');
-                if (cleanTr) map[cleanTr] = currentUnyo;
-            });
-        }
-    });
-    return map;
-}
-const unyoMap = parseUnyo(RAW_UNYO_DATA);
-
+// 車両形式の判定
 function getCarModel(sk) {
     const models = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
     return models[String(sk)] || "";
@@ -233,52 +119,63 @@ async function update() {
         all.forEach(st => {
             (st.ps || []).forEach(p => {
                 if (!p.tr) return;
-                const trStr = String(p.tr);
+                
+                // 駅IDと番線IDを組み合わせて座標を特定
                 const key = p.bs ? `${st.id}_${p.bs}` : st.id;
                 const base = posCoords[key];
 
                 if (base) {
-                    activeIds.add(trStr);
+                    const trId = String(p.tr);
+                    activeIds.add(trId);
+                    
+                    // 重複回避（同じ番線に2本いる場合は少し右にずらす）
                     const cKey = `${base.x}_${base.y}`;
                     const offset = (posCounter[cKey] || 0) * 12;
                     posCounter[cKey] = (posCounter[cKey] || 0) + 1;
 
-                    let el = document.getElementById(`tr-${trStr}`);
+                    let el = document.getElementById(`tr-${trId}`);
                     if (!el) {
                         el = document.createElement('div');
-                        el.id = `tr-${trStr}`;
+                        el.id = `tr-${trId}`;
                         el.className = 'train';
                         layer.appendChild(el);
                     }
+
+                    // スタイルと位置の更新
+                    el.className = `train sy-${p.sy || '6'}`;
                     el.style.left = `${base.x + offset}px`;
                     el.style.top = `${base.y}px`;
-                    el.className = `train sy-${p.sy || '6'}`;
 
                     const model = getCarModel(p.sk);
-                    const lookupTr = trStr.replace(/^0+/, '');
-                    const unyo = unyoMap[lookupTr] || "--";
                     const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
 
+                    // 【更新】運用番号を削除し、形式と列車番号、遅延のみを表示
                     el.innerHTML = `
                         <div class="train-label">
                             <span>${model}</span>
-                            <span>${unyo}</span>
-                            <span>${trStr}</span>
+                            <span>${trId}</span>
                             ${delayHtml}
                         </div>`;
                 }
             });
         });
 
-        // 不要な列車削除
+        // 画面から消えた列車を削除（ゴースト防止）
         document.querySelectorAll('.train').forEach(el => {
-            if (!activeIds.has(el.id.replace('tr-', ''))) el.remove();
+            if (!activeIds.has(el.id.replace('tr-', ''))) {
+                el.remove();
+            }
         });
+
         document.getElementById('status').textContent = "最終更新: " + new Date().toLocaleTimeString();
-    } catch (e) { console.error(e); }
+    } catch (e) {
+        console.error("Fetch Error:", e);
+        document.getElementById('status').textContent = "通信エラー";
+    }
 }
 
-setInterval(update, 20000);
+// 15秒おきに自動更新
+setInterval(update, 15000);
 update();
 </script>
 </body>
