--- a/map.html
+++ b/map.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
@@ -19,11 +19,9 @@
             overflow: auto; -webkit-overflow-scrolling: touch; background: #000;
         }
 
-        /* 1200x675固定 */
         .map-content { position: relative; width: 1200px; height: 675px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
 
-        /* 列車アイコン本体 */
         .train {
             position: absolute; width: 26px; height: 16px;
             border-radius: 2px; border: 1.5px solid #fff;
@@ -33,29 +31,34 @@
             display: flex; align-items: center; justify-content: center;
         }
 
-        /* 詳細情報ラベル */
+        /* 詳細情報ラベル：1行表示 & 左右切り替え */
         .train-label {
-            position: absolute; top: -38px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
             background: rgba(0,0,0,0.85); color: #fff;
-            padding: 3px 6px; border-radius: 4px;
+            padding: 2px 6px; border-radius: 4px;
             font-size: 10px; font-weight: bold; white-space: nowrap;
-            display: flex; flex-direction: column; align-items: center;
-            line-height: 1.3; border: 1px solid #444;
+            display: flex; flex-direction: row; align-items: center; gap: 5px;
+            border: 1px solid #444;
             pointer-events: none;
         }
 
-        .label-row { display: flex; gap: 6px; align-items: center; }
-        .delay-text { color: #ff4444; font-weight: 900; } /* 遅れは赤 */
-        .car-model { color: #00ffcc; font-size: 9px; }
-        .unyo-no { color: #ffeb3b; } /* 運用番号(1T/81Kなど)は目立つ黄色 */
+        /* 上り：アイコンの右側に表示 */
+        .label-nobori { left: 100%; margin-left: 8px; }
+        /* 下り：アイコンの左側に表示 */
+        .label-kudari { right: 100%; margin-right: 8px; }
 
-        /* 種別カラー設定 */
-        .sy-1 { background-color: #ff4c7c; } /* 特急 */
-        .sy-2 { background-color: #00b66a; } /* 急行 */
-        .sy-3 { background-color: #0082ff; } /* 快速 */
-        .sy-5 { background-color: #d8d100; color: #000; } /* 区急 */
-        .sy-6 { background-color: #888; }    /* 各停 */
-        .sy-9, .sy-11 { background-color: #c71585; } /* ライナー */
+        .delay-text { color: #ff4444; font-weight: 900; }
+        .car-model { color: #00ffcc; font-size: 9px; }
+        .unyo-no { color: #ffeb3b; }
+
+        .sy-1 { background-color: #ff4c7c; }
+        .sy-2 { background-color: #00b66a; }
+        .sy-3 { background-color: #0082ff; }
+        .sy-5 { background-color: #d8d100; color: #000; }
+        .sy-6 { background-color: #888; }
+        .sy-9, .sy-11 { background-color: #c71585; }
     </style>
 </head>
 <body>
@@ -107,13 +110,11 @@ const posCoords = {
     "E011_1": {x: 1122, y: 322}, "E011_2": {x: 1122, y: 351}
 };
 
-// sk(車両区分)による形式名変換
 function getCarModel(sk) {
     const models = { "2":"2000系", "5":"5000系", "7":"7000系", "8":"8000系", "9":"9000系", "0":"10-300形" };
     return models[String(sk)] || "";
 }
 
-// toei.txtの解析
 async function fetchUnyo() {
     let map = {};
     try {
@@ -122,7 +123,6 @@ async function fetchUnyo() {
         const text = await res.text();
         const lines = text.split(/\r?\n/);
         let currentUnyo = "";
-
         for (let line of lines) {
             line = line.trim();
             if (!line) continue;
@@ -144,7 +144,6 @@ async function update() {
         const unyoMap = await fetchUnyo();
         const res = await fetch(FEED_URL + "?" + Date.now());
         const data = await res.json();
-        
         const layer = document.getElementById('trainLayer');
         const activeIds = new Set();
         const allTrains = [...(data.TS || []), ...(data.TB || [])];
@@ -158,7 +157,6 @@ async function update() {
 
                 if (base) {
                     activeIds.add(p.tr);
-                    
                     const cKey = `${base.x}_${base.y}`;
                     const offset = (posCounter[cKey] || 0) * 10;
                     posCounter[cKey] = (posCounter[cKey] || 0) + 1;
@@ -179,10 +177,15 @@ async function update() {
                     const unyo = unyoMap[p.tr] || "--";
                     const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
 
+                    // 【変更箇所】方向(p.ki)によってクラスを切り替え
+                    const dirClass = (p.ki === "1") ? "label-nobori" : "label-kudari";
+
                     el.innerHTML = `
-                        <div class="train-label">
-                            <div class="label-row"><span class="car-model">${model}</span><span class="unyo-no">${unyo}</span></div>
-                            <div class="label-row"><span>${p.tr}</span>${delayHtml}</div>
+                        <div class="train-label ${dirClass}">
+                            <span class="car-model">${model}</span>
+                            <span class="unyo-no">${unyo}</span>
+                            <span>${p.tr}</span>
+                            ${delayHtml}
                         </div>`;
                 }
             });
