--- a/map.html
+++ b/map.html
@@ -46,8 +46,8 @@
         }
 
         /* 方向別の位置指定：上りは右、下りは左 */
-        .label-nobori { left: 100%; margin-left: 8px; }  /* アイコンの右側 */
-        .label-kudari { right: 100%; margin-right: 8px; } /* アイコンの左側 */
+        .label-nobori { right: 100%; margin-right: 8px; }  /* アイコンの右側 */
+        .label-kudari { left: 100%; margin-left: 8px; } /* アイコンの左側 */
 
         .delay-text { color: #ff4444; font-weight: 900; }
         .car-model { color: #00ffcc; font-size: 9px; }
